# UnrealEngine_Bridge

./: .gitignore  Build.bat  CLAUDE.md  INVENTORY.md  Launch-UEBridge.ps1  README.md  README_BRIDGE_IMPLEMENTATION.md  SETUP_GUIDE.md  UnrealEngine_Bridge.uproject  bridge_orchestrator.py  pyproject.toml  remote_control_bridge.py  test_bridge_roundtrip.py  test_live.py  usd_bridge.py
.planning/: CRT_CLEANUP_DISPATCH.md  CRT_NIAGARA_DISPATCH.md
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini  DefaultRemoteControl.ini
Content/: MainLevel_BuiltData.uasset
Content/Blueprints/: BP_BridgeController_EXAMPLE.txt  BP_ClaudeTest.uasset
Content/Materials/: M_CRT_Dot.uasset  M_CRT_Dot_Off.uasset  M_CRT_Frame.uasset  M_CRT_Pink.uasset  M_CRT_Screen.uasset  M_Dot_Bright.uasset  M_PhosphorDot.uasset  M_Phosphor_Off.uasset  M_Phosphor_Pink.uasset  M_Test_Red.uasset
Content/Niagara/: NS_CRT_DotGrid.uasset  NS_DotGrid.uasset
Content/Python/: setup_ue_bridge_ui.py  test_claude_access.py
Plugins/UEBridge/: UEBridge.uplugin
Source/: UnrealEngine_Bridge.Target.cs  UnrealEngine_BridgeEditor.Target.cs
USD/: bridge_state.usda  cognitive_substrate_template.usda
tests/: conftest.py  test_actors_async.py  test_assets_async.py  test_blueprints_async.py  test_circuit_breaker.py  test_editor.py  test_level_async.py  test_materials.py  test_metrics.py  test_mograph_async.py  test_perception_async.py  test_properties_async.py  test_python_exec_async.py  test_scene.py  test_usd_bridge.py  test_validation.py
ue_mcp/: __version__.py  mcp_server.py  metrics.py
(+387 files in other folders)
