[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ue-bridge"
version = "2.1.0"
description = "MCP server bridging Claude Code to Unreal Engine 5 via Remote Control API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
usd = [
    "usd-core>=24.0",
]

[project.scripts]
ue-mcp = "ue_mcp.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
